--- a/UI/Views/Permisos/GrupoPermisos.cshtml
+++ b/UI/Views/Permisos/GrupoPermisos.cshtml
@@ -39,7 +39,7 @@
 
                     <td>
                         <a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })"><i class="fa fa-gear"></i></a>&ensp;&ensp;
-                        <a href="@Url.Action("Delete", "Usuario", new {id=item.Id })"><i class="fa fa-trash"></i></a>&ensp;&ensp;
+                        <a href="@Url.Action("Delete", "Permisos", new {id=item.Id })"><i class="fa fa-trash"></i></a>&ensp;&ensp;
 
                     </td>
 
