--- a/UI/Views/Permisos/EditarPerfilUsuario.cshtml
+++ b/UI/Views/Permisos/EditarPerfilUsuario.cshtml
@@ -1,13 +1,13 @@
 ﻿
-@model BE.PerfilFamiliaBE
+@model BE.UsuarioBE
 
 @{
-    ViewBag.Title = "EditarGrupo";
+    ViewBag.Title = "Editar Perfil de Usuario";
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Editar Grupo: @Model.Descripcion </h1>
+        <h1 class="h2">Editar Perfil de Usuario: @Model.Nombre.ToString() </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <a> @Html.ActionLink("Volver", "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
@@ -23,71 +23,67 @@
     {
         @Html.AntiForgeryToken()
 
-<div class="container-fluid">
+        <div class="container-fluid">
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Id)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-    <div class="row">
-        <div class="col-4">
-            <div class="input-group mb-3" style="max-width: 400px;">
-                <span class="input-group-text primary" id="basic-addon3">Nombre</span>
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Guardar</button>
-            </div>
+            <div class="row">
+                <div class="col-4">
 
-            <div class="input-group" style="max-width: 400px;">
-                <span class="input-group-text">Grupos</span>
-                @Html.DropDownList("Grupos", new SelectList(ViewBag.Familias, "Id", "Descripcion"), new { @class = "form-select", @Id = "GruposSel" })
-                <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">Agregar</button>
-            </div>
-            <br />
-            <div class="input-group" style="max-width: 400px;">
-                <span class="input-group-text">Permisos</span>
-                @Html.DropDownList("Grupos", new SelectList(ViewBag.Permisos, "Id", "Descripcion"), new { @class = "form-select", @Id = "PermisoSel" })
-                <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">Agregar</button>
-            </div>
-            <br />
 
-            <div class="alert alert-danger fade collapse" role="alert" id="Mensaje" style="max-width: 400px;">
-                El Elemento ya es parte del Grupo!
-            </div>
-            <div class="alert alert-danger fade collapse" role="alert" id="Mensaje2" style="max-width: 400px;">
-                Asignación no permitida
-            </div>
+                    <div class="input-group" style="max-width: 400px;">
+                        <span class="input-group-text">Grupos</span>
+                        @Html.DropDownList("Grupos", new SelectList(ViewBag.Familias, "Id", "Descripcion"), new { @class = "form-select", @Id = "GruposSel" })
+                        <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">Agregar</button>
+                    </div>
+                    <br />
+                    <div class="input-group" style="max-width: 400px;">
+                        <span class="input-group-text">Permisos</span>
+                        @Html.DropDownList("Grupos", new SelectList(ViewBag.Permisos, "Id", "Descripcion"), new { @class = "form-select", @Id = "PermisoSel" })
+                        <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">Agregar</button>
+                    </div>
+                    <br />
 
-        </div>
+                    <div class="alert alert-danger fade collapse" role="alert" id="Mensaje" style="max-width: 400px;">
+                        El Elemento ya es parte del Grupo!
+                    </div>
+                    <div class="alert alert-danger fade collapse" role="alert" id="Mensaje2" style="max-width: 400px;">
+                        Asignación no permitida
+                    </div>
 
-        <div class="col-4">
-            <ul class="list-group" style="max-width: 400px;">
-                <li class="list-group-item active " aria-current="true">Elementos del Grupo:</li>
-                @foreach (var item in Model.Hijos)
-                {
-                    if (@item.Permiso.ToString() == "Ninguno")
-                    {
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold"><i class="fa fa-folder"></i><a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })">&nbsp;@item.Descripcion</a> </div>
                 </div>
-                <span class="badge bg-primary rounded-pill">@item.Hijos.Count()</span>&nbsp;&nbsp; <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
-            </li>
-                    }
-                    else
 
-                    {
-                        <li class="list-group-item d-flex justify-content-between align-items-start">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold"><i class="fa fa-key"></i> @item.Descripcion</div>
-                            </div>
-                            <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
-                        </li>
-                    }
+                <div class="col-4">
+                    <ul class="list-group" style="max-width: 400px;">
+                        <li class="list-group-item active " aria-current="true">Permisos del Usuario:</li>
+                        @foreach (var item in Model.Permisos)
+                        {
+                            if (@item.Permiso.ToString() == "Ninguno")
+                            {
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-bold"><i class="fa fa-folder"></i><a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })">&nbsp;@item.Descripcion</a> </div>
+                                    </div>
+                                    <span class="badge bg-primary rounded-pill">@item.Hijos.Count()</span>&nbsp;&nbsp; <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
+                                </li>
+                            }
+                            else
 
-                }
-            </ul>
+                            {
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-bold"><i class="fa fa-key"></i> @item.Descripcion</div>
+                                    </div>
+                                    <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
+                                </li>
+                            }
+
+                        }
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
     }
 
@@ -178,7 +174,7 @@
         var AgregarGrupo = function () {
 
             var GrupoSeleccionado = $('#GruposSel').val();
-            var ComponentesActuales =@Html.Raw(Json.Encode(Model.Hijos));
+            var ComponentesActuales =@Html.Raw(Json.Encode(Model.Permisos));
             var GrupoActual =@Html.Raw(Json.Encode(Model.Id));
 
             if ((ComponentesActuales.find(element => element.Id == GrupoSeleccionado))) // No permitir agregar un permiso que ya exista
@@ -204,7 +200,7 @@
                         if (response.success) {
                             $("#ModalAgregarGrupo").modal("hide");
                             location.reload();
-                        } else {                                   
+                        } else {
                             $("#ModalAgregarGrupo").modal("hide");
                             $('#Mensaje2').addClass('show');
                             window.setTimeout(function () {
@@ -212,7 +208,7 @@
                             }, 2000);
                         }
                     }
-                   
+
                 })
             }
         }
@@ -226,7 +222,7 @@
         var AgregarPermiso = function () {
 
             var PermisoSeleccionado = $('#PermisoSel').val();
-            var ComponentesActuales =@Html.Raw(Json.Encode(Model.Hijos));
+            var ComponentesActuales =@Html.Raw(Json.Encode(Model.Permisos));
             var GrupoActual =@Html.Raw(Json.Encode(Model.Id));
 
             if ((ComponentesActuales.find(element => element.Id == PermisoSeleccionado))) // No permitir agregar al grupo un permiso que ya exista
@@ -240,7 +236,7 @@
 
                 $("#ModalAgregarPermiso").modal("hide");
             }
-            
+
             else {
                 console.log(PermisoSeleccionado, GrupoActual);
                 $.ajax({
@@ -286,3 +282,4 @@
         }
     </script>
 }
+
