--- a/UI/Views/Usuario/Index.cshtml
+++ b/UI/Views/Usuario/Index.cshtml
@@ -67,6 +67,7 @@
                     <a href="@Url.Action("Edit", "Usuario", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
                     <a href="@Url.Action("Delete", "Usuario", new {id=item.Id })"><i class="fa fa-trash"></i></a>&ensp;&ensp;
                     <a href="@Url.Action("Details", "Usuario", new { id = item.Id })"><i class="fa fa-eye"></i></a>&ensp; &ensp;
+                    <a href="@Url.Action("EditarPerfilUsuario", "Permisos", new { id = item.Id })"><i class="fa fa-key"></i></a>&ensp; &ensp;
                 </td>
 
             </tr>
