Validación de permisos

--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -1,8 +1,8 @@
-﻿@using BE
+﻿
 
 @{
 
-    var Permisos = (List<PerfilPermisoBE>)Session["Permisos"];
+    var Permisos = (List<string>)Session["Permisos"];
 
 }
 <!doctype html>
@@ -134,17 +134,21 @@
                             <div class="collapse" id="account-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 
-                                    @{
-                                           <li>@Permisos.Count.ToString()</li>
+                                    @{ if (Permisos.Exists(per => per.ToString() == "GestionUsuarios"))
 
-                                        }
+                                        {<li>@Html.ActionLink("Usuarios", "Index", "Usuario", null, new { @class = "link-dark rounded", @id = "Usuarios" })</li>}
+                                    }
 
-                                
-                                    <li>@Html.ActionLink("Usuarios", "Index", "Usuario", null, new { @class = "link-dark rounded", @id = "Usuarios" })</li>
+                                    @{ if (Permisos.Exists(per => per.ToString() == "GestionPerfilUsuario"))
 
-                                    <li><a href="~/Usuario" class="link-dark rounded">Permisos de Usuario</a></li>
+                                        { <li><a href="~/Usuario" class="link-dark rounded">Permisos de Usuario</a></li>}
+                                    }
 
-                                    <li>@Html.ActionLink("Grupo de Permisos", "GrupoPermisos", "Permisos", null, new { @class = "link-dark rounded", @id = "Grupos" })</li>
+                                    @{ if (Permisos.Exists(per => per.ToString() == "GestionPerfilUsuario"))
+
+                                        { <li>@Html.ActionLink("Grupo de Permisos", "GrupoPermisos", "Permisos", null, new { @class = "link-dark rounded", @id = "Grupos" })</li>}
+                                    }
+
 
                                 </ul>
                             </div>
