--- a/UI/Views/Permisos/EditarPerfilUsuario.cshtml
+++ b/UI/Views/Permisos/EditarPerfilUsuario.cshtml
@@ -59,13 +59,13 @@
                         <li class="list-group-item active " aria-current="true">Permisos del Usuario:</li>
                         @foreach (var item in Model.Permisos)
                         {
-                            if (@item.Permiso.ToString() == "Ninguno")
+                            if (@item.Permiso == null)
                             {
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold"><i class="fa fa-folder"></i><a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })">&nbsp;@item.Descripcion</a> </div>
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">@item.Hijos.Count()</span>&nbsp;&nbsp; <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
+                                    <span class="badge bg-primary rounded-pill">@item.Hijos.Count()</span>&nbsp;&nbsp; <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso')"><i class="fa fa-trash"></i></a></span>
                                 </li>
                             }
                             else
@@ -75,7 +75,7 @@
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold"><i class="fa fa-key"></i> @item.Descripcion</div>
                                     </div>
-                                    <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso.ToString()')"><i class="fa fa-trash"></i></a></span>
+                                    <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso')"><i class="fa fa-trash"></i></a></span>
                                 </li>
                             }
 
