--- a/UI/Views/Permisos/EditarGrupo.cshtml
+++ b/UI/Views/Permisos/EditarGrupo.cshtml
@@ -53,7 +53,7 @@
                 El Elemento ya es parte del Grupo!
             </div>
             <div class="alert alert-danger fade collapse" role="alert" id="Mensaje2" style="max-width: 400px;">
-                Asignación no permitida
+                Ya existe una asignación Implísita!
             </div>
 
         </div>
